# taskflow

backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  worker.py
backend/app/core/: celery_app.py  config.py  constants.py  middleware.py  security.py
backend/app/db/: main.py
backend/app/models/: enums.py  project.py  task.py  user.py
backend/app/routes/: auth.py  project.py  task.py  user.py
backend/app/schema/: auth.py  project.py  project_member.py  task.py  user.py
backend/app/services/: project_service.py  task_service.py  user_service.py
backend/app/utils/: mail.py
frontend/: .gitignore  .oxfmtrc.json  .prettierignore  orval.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  routeTree.gen.ts
frontend/src/api/: client.schemas.ts  schema.ts
frontend/src/api/auth/: auth.ts
frontend/src/api/projects/: projects.ts
frontend/src/api/tasks/: tasks.ts
frontend/src/api/users/: users.ts
frontend/src/components/ui/: form.tsx
frontend/src/routes/: __root.tsx  me.$name.tsx
frontend/src/routes/about/: index.tsx
frontend/src/routes/auth/: login.tsx
